@@ -12,6 +12,9 @@ What's New in Python 2.5 beta 2?
 Core and builtins
 -----------------
 
+- Bug #927248: Recursive method-wrapper objects can now safely
+  be released.
+
 - Bug #1417699: Reject locale-specific decimal point in float()
   and atof().
 
